<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DFAD</string>
    <string name="face_detected_message">I SEE YOUR FACE</string>
    <string name="face_lost_message">HELLO? IS ANYBODY THERE?</string>
    <string name="error_with_face_detection">Face detection error</string>
    <string name="acc_label">Accelerator</string>
    <string name="gra_label">Gravity</string>
    <string name="mag_label">Magnetometer</string>
    <string name="pos_label">Position angles</string>
    <string name="x_label">x: ???</string>
    <string name="y_label">y: ???</string>
    <string name="z_label">z: ???</string>
    <string name="default_eye_label">eye missing</string>
    <string name="left_eye_open">Left eye open!</string>
    <string name="left_eye_closed">Left eye closed!</string>
    <string name="right_eye_open">Right eye open!</string>
    <string name="right_eye_closed">Right eye closed!</string>
    <string name="res_label">True acceleration</string>
    <string name="bark_button_label">Bark!</string>
    <string name="keep_screen_on">Keep screen on</string>
    <string name="sms_mms_messages">SMS/MMS:</string>
    <string name="default_amount">0</string>
    <string name="incoming_calls_label">Incoming calls:</string>
    <string name="outgoing_calls_label">Outgoing calls:</string>
    <string name="missed_calls_label">Missed calls:</string>

</resources>