<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/chart"
        android:layout_width="match_parent"
        android:layout_height="249dp" />

    <TextView
        android:id="@+id/resLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/chart"
        android:layout_marginBottom="200dp"
        android:text="@string/res_label" />

    <TextView
        android:id="@+id/xRes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/chart"
        android:layout_below="@+id/resLabel"
        android:layout_marginTop="-200dp"
        android:text="@string/x_label" />

    <TextView
        android:id="@+id/yRes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/chart"
        android:layout_below="@+id/xRes"
        android:text="@string/y_label" />

    <TextView
        android:id="@+id/zRes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/chart"
        android:layout_below="@+id/yRes"
        android:text="@string/z_label" />

    <TextView
        android:id="@+id/smsMmsLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/resLabel"
        android:layout_marginStart="160dp"
        android:text="@string/sms_mms_messages" />

    <TextView
        android:id="@+id/smsMms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/resLabel"
        android:layout_marginStart="260dp"
        android:text="@string/default_amount" />

    <TextView
        android:id="@+id/incomingCallsLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/smsMmsLabel"
        android:layout_below="@+id/resLabel"
        android:layout_marginTop="-200dp"
        android:text="@string/incoming_calls_label" />

    <TextView
        android:id="@+id/incomingCalls"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/smsMms"
        android:layout_below="@+id/resLabel"
        android:layout_marginTop="-200dp"
        android:text="@string/default_amount" />

    <TextView
        android:id="@+id/outgoingCallsLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/smsMmsLabel"
        android:layout_below="@+id/xRes"
        android:text="@string/outgoing_calls_label" />

    <TextView
        android:id="@+id/outgoingCalls"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/smsMms"
        android:layout_below="@+id/xRes"
        android:text="@string/default_amount" />

    <TextView
        android:id="@+id/missedCallsLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@id/smsMmsLabel"
        android:layout_below="@+id/yRes"
        android:text="@string/missed_calls_label" />

    <TextView
        android:id="@+id/missedCalls"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/smsMms"
        android:layout_below="@+id/yRes"
        android:text="@string/default_amount" />


    <TextView
        android:id="@+id/leftEye"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="100dp"
        android:layout_toStartOf="@id/keepScreenOn"
        android:text="@string/default_eye_label" />

    <TextView
        android:id="@+id/rightEye"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="100dp"
        android:layout_toEndOf="@+id/keepScreenOn"
        android:text="@string/default_eye_label" />

    <TextView
        android:id="@+id/cameraTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="70dp"
        android:text="@string/face_lost_message" />

    <CheckBox
        android:id="@+id/keepScreenOn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:checked="false"
        android:text="@string/keep_screen_on" />

</RelativeLayout>